--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -1,12 +1,8 @@
-.content {
-  grid-area: content;
-  background-color: rgb(109, 91, 226);
-}
-.content .image img {
+.image img {
   width: 100%;
   height: 400px;
 }
-.content .image1 img {
+.image1 img {
   width: 10%;
   height: 5%;
 }
