--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -2,16 +2,17 @@
   padding-left: 9%;
   grid-area: nav;
   background-color: rgb(76, 235, 84);
+  padding: 25px;
 }
 
 .item a{
-  color: rgb(248, 7, 7);
+  text-decoration: none;
+  font-size: 20px;
 }
 
-.Settings{
-  padding-top: 5px;
+.item a{
+  color: rgb(0, 0, 0);
 }
-.Settings.active a{
-  padding-top: 105px;
+.item a.activeNavlink{
   color: gold;
 }
