--- a/src/Messages/dialogs.module.css
+++ b/src/Messages/dialogs.module.css
@@ -3,15 +3,17 @@
   color: darkblue;
   display: grid;
   grid-template-areas: "dialog message";
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: 2fr 8fr;
+  min-width: 50%;
 }
 
 .dialog {
-  padding-left: 15px;
-  grid-area: dialog;
+  grid-area: 'dialog';
+  background-color: rgb(230, 209, 209);
 }
 
 .dialogItem {
+
 }
 
 .ActivDialogItem {
@@ -19,5 +21,6 @@
 }
 
 .Messages {
-  grid-area: message;
+  grid-area: 'message';
+  background-color: cyan;
 }
